--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-web-browser": "~14.0.2",
     "mobx": "^6.13.6",
     "mobx-react-lite": "^4.1.0",
+    "path-browserify": "^1.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
@@ -57,6 +58,7 @@
     "jest-expo": "~52.0.4",
     "metro-react-native-babel-preset": "^0.77.0",
     "react-test-renderer": "18.3.1",
+    "source-map-support": "^0.5.21",
     "typescript": "^5.3.3"
   },
   "private": true
